--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-              <img class="computer" src="/images/computer.png" alt="computer-img">
+              <img class="computer" src="images/computer.png" alt="computer-img">
               <h3>Programming and Technology</h3>
               <p class="skills-para">I started learning to code in my late teens because i understood my passion and interest in computers and programming. Overtime, I have gained a wealth of experience in coding and Web Development.</p>
             </div>
