--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     </head>
     <body>
         <div class="top">
-            <img class="top_cloud" src="images/cloud.png" alt="cloud-img">
+            <img class="top_cloud" src="cloud.png" alt="cloud-img">
             <h1>I'm Abhishek Reddy.</h1>
             <h2 class="programmer">A <span class="pro">Pro</span>grammer.</h2>
-            <img class="bottom_cloud" src="images/cloud.png" alt="cloud-img">
-            <img src="images/mountain.png" alt="mountain-img">
+            <img class="bottom_cloud" src="cloud.png" alt="cloud-img">
+            <img src="mountain.png" alt="mountain-img">
         </div>
         <div class="middle-container">
           <div class="profile">
-            <img class="my_photo" src="images/abhishek-modified.png" alt="abhishek-img">
+            <img class="my_photo" src="abhishek-modified.png" alt="abhishek-img">
             <h2>Bonjour.</h2>
             <p class="p">I'm a Python and Web Developer.I recently graduated from college, and I'm a fresher.</p>
           </div>
@@ -30,12 +30,12 @@
           <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-              <img class="computer" src="images/computer.png" alt="computer-img">
+              <img class="computer" src="computer.png" alt="computer-img">
               <h3>Programming and Technology</h3>
               <p class="skills-para">I started learning to code in my late teens because i understood my passion and interest in computers and programming. Overtime, I have gained a wealth of experience in coding and Web Development.</p>
             </div>
             <div class="skill-row">
-              <img class="chillies-img" src="images/chillies.png" alt="chillies-img">
+              <img class="chillies-img" src="chillies.png" alt="chillies-img">
               <h3>Hot Wings Challenge</h3>
               <p class="">But my best skill is actually in eating hot wings. I am the undisputed king of hot wing challenges. Ghost peppers and Carolina Reapers are my favourite snacks.</p>
             </div>
